[gd_scene load_steps=7 format=3 uid="uid://c4nwgu8low3ib"]

[ext_resource type="Script" path="res://objs/storage/market_terminal.gd" id="1_em15g"]
[ext_resource type="AudioStream" uid="uid://bdhh8hluat28f" path="res://assets/sounds/put_in_storage.mp3" id="2_tb1hh"]
[ext_resource type="PackedScene" uid="uid://6fd5dxh0gyv7" path="res://assets/models/trade_computer/trade_computer.gltf" id="2_voseh"]
[ext_resource type="AudioStream" uid="uid://wfn4ftlcrn6f" path="res://assets/sounds/take_out_of_storage.mp3" id="3_x6tfn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f3ppr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cpoff"]
size = Vector3(1.1, 1.5, 2)

[node name="market_terminal" type="StaticBody3D"]
script = ExtResource("1_em15g")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_f3ppr")

[node name="mesh" parent="." instance=ExtResource("2_voseh")]

[node name="raw_material_spawn" type="Node3D" parent="mesh"]
transform = Transform3D(-0.75, 0, 1.13247e-07, 0, 0.75, 0, -1.13247e-07, 0, -0.75, 0.025, 0.002, 0.425)

[node name="market_raw_material_spawn" type="Node3D" parent="mesh"]
transform = Transform3D(-0.75, 0, 1.13247e-07, 0, 0.75, 0, -1.13247e-07, 0, -0.75, 0.025, 0.002, 0.425)

[node name="market_resource_spawn" type="Node3D" parent="mesh"]
transform = Transform3D(-0.75, 0, 1.13247e-07, 0, 0.75, 0, -1.13247e-07, 0, -0.75, 0.025, 0.002, 0.425)

[node name="area" type="Area3D" parent="."]

[node name="collision" type="CollisionShape3D" parent="area"]
shape = SubResource("BoxShape3D_cpoff")

[node name="audio_store" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_tb1hh")
unit_size = 3.0

[node name="audio_take" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_x6tfn")
unit_size = 3.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
